After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 659966 - Fix module blacklisting
Fix module blacklisting
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
unspecified
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2011-09-23 20:34 UTC by Matthias Clasen
Modified: 2011-09-23 23:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix module blacklisting (1.10 KB, patch)
2011-09-23 20:34 UTC, Matthias Clasen
none Details | Review

Description Matthias Clasen 2011-09-23 20:34:48 UTC
The handling of the module lists is a bit confusing here. There is
a global list that is populated with initial modules from GTK_MODULES,
and then there is a second list that is suppposed to hold the modules
loaded from the gtk-modules xsetting, which we attach to the GtkSettings
object. The blacklisting caused us to put the wrong modules into the
second list, and mess up the module refcounts, eventually double-freeing
memory when the setting changes repeatedly.
Comment 1 Matthias Clasen 2011-09-23 20:34:50 UTC
Created attachment 197369 [details] [review]
Fix module blacklisting